--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title>Hong Kong Rental Reimbursement – Assessable Income Estimator</title>
 
-  <!-- Google Analytics (GA4) – replace G-XXXXXXXXXX with your Measurement ID -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <!-- Google Analytics (GA4) – replace G-2NFRRJLFWX with your Measurement ID -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2NFRRJLFWX"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
+    gtag('config', 'G-2NFRRJLFWX');
   </script>
   <!-- End Google Analytics -->
 
@@ -209,3 +209,4 @@
   </script>
 </body>
 </html>
+
