--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </a>
     </small></p>
     <p><small>
-      © 2026 Your Name / Your Company. All rights reserved.
+      © 2026 ellenarie. All rights reserved.
     </small></p>
   </div>
 
@@ -209,4 +209,5 @@
   </script>
 </body>
 </html>
+
 
