--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <title>Hong Kong Rental Reimbursement – Assessable Income Estimator</title>
 
-  <!-- Google Analytics (GA4) – replace G-2NFRRJLFWX with your Measurement ID -->
+  <!-- Google Analytics (GA4) – replace G-XXXXXXXXXX with your Measurement ID -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2NFRRJLFWX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-2NFRRJLFWX');
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2NFRRJLFWX');
   </script>
   <!-- End Google Analytics -->
 
@@ -209,5 +210,6 @@
   </script>
 </body>
 </html>
+
 
 
