--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </a>
     </small></p>
     <p><small>
-      © 2026 ellenarie. All rights reserved.
+      © 2026 arie-hk. All rights reserved.
     </small></p>
   </div>
 
@@ -210,6 +210,7 @@
   </script>
 </body>
 </html>
+
 
 
 
